# simplicityhl-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/actions/setup-rbmt/: action.yml
.github/workflows/: ci-failure-issues.yml  cron-weekly-sync.yml  lsp-ci.yml  publish-lsp.yml  publish.yml  rust.yml
src/: backend.rs  utils.rs
src/completion/: builtin.rs  jet.rs  type_cast.rs
vscode/: package.json  tsconfig.json
vscode/src/: compile.ts  extension.ts
vscode/syntaxes/: simplicityhl.tmLanguage.json
